Fixed form being clipped by navbar

--- a/frontend/src/pages/LandingPage.css
+++ b/frontend/src/pages/LandingPage.css
@@ -151,9 +151,11 @@ select::placeholder {
   padding: 30px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
-  margin: 0 auto;
+  width: 750px;
+  max-height: 91vh;
   font-family: 'Poppins', sans-serif;
+  margin-top: 69px;
+  overflow-y: auto;
 }
 
 .form-container h2 {
